--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,3 +2,17 @@
     display: flex;
     flex-direction: column;
 }
+
+.forms {
+    margin: 30px 0px 0px 30px;
+    height: 250px;
+    width: 300px;
+}
+
+.tableMargin {
+    margin: 30px;
+}
+
+table {
+    width: 100%;
+}
